--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,7 @@
 body {
-    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 h1 {
@@ -15,6 +17,40 @@ form {
 input,
 textarea,
 button {
+    border: 2px solid black;
+    border-radius: 20px;
+    width: 250px;
     margin: 10px 0;
     padding: 10px;
+    font-size: 15px;
+}
+
+li{
+    margin: 20px 20px 20px -10px;
+    padding: 20px;border-radius: 20px;
+    list-style-type: none;
+    border: 2px solid rgb(136, 223, 136);
+    justify-content: space-evenly;
+    display: flex;
+}
+
+.delete {
+    width: 150px;
+    font-size: 15px;
+}
+
+.listItem {
+    display: flex;
+}
+
+.description {
+    width: 200px;
+}
+
+li div {
+    align-self: center;
+}
+
+.heading2 {
+    margin-left: 10px;
 }
