--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,7 +28,7 @@ button {
 li{
     margin: 20px 20px 20px -10px;
     padding: 20px;border-radius: 20px;
-    list-style-type: none;
+    /* list-style-type: none; */
     border: 2px solid rgb(136, 223, 136);
     justify-content: space-evenly;
     display: flex;
